<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="3dp" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/content_description_upload_progress_image"
        android:src="@android:drawable/stat_sys_upload" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/upload_notification_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_progress_bar_uploading"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/upload_percent_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_progress_bar_zero_per_cent"
            android:textSize="16dp" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

</LinearLayout>